--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <table>
         <tr>
-            <td><img src="RAVI IMAGE.jpeg" style="height: 250px;" alt="RAVI PHOTOS"></td>
+            <td><img src="https://avatars.githubusercontent.com/u/124213686?s=400&u=c7b1ca45180ba46add9183394d3b092ff2721d5b&v=4" style="height: 250px;" alt="RAVI PHOTOS"></td>
             <td><H1> Ravi Ranjan Sah</H1>
                 <p> <i>I am civil Engineering student of <a target="_top" href="https://www.gecvaishali.org/"> Government Engineering College,Vaishali</a> </i></p>
                 <p>I ❤️ Frontent web Development, i am lern web devlopment from <a href="https://github.com/Anuj-Kumar-Sharma/Web-Development-Course#web-development-course"> Anuj Bhaiya </a> and also thanks YouTube for available free contant of  <a href="https://www.youtube.com/results?search_query=web+development">Web Devlopment</a>. </p>
